testcrate/ui/not-a-result.stderr
error[E0277]: the trait bound `{integer}: futures::__rt::IsResult` is not satisfied
 --> $DIR/not-a-result.rs:8:13
  |
8 | fn foo() -> u32 {
  |             ^^^ async functions must return a `Result` or a typedef of `Result`
  |
  = help: the trait `futures::__rt::IsResult` is not implemented for `{integer}`
  = note: required by `futures::__rt::gen_async`

error[E0308]: mismatched types
 --> $DIR/not-a-result.rs:8:13
  |
8 | fn foo() -> u32 {
  |             ^^^
  |             |
  |             expected u32, found struct `futures::__rt::GenAsync`
  |             expected `u32` because of return type
  |
  = note: expected type `u32`
             found type `futures::__rt::GenAsync<[static generator@$DIR/not-a-result.rs:7:1: 10:2 _], _>`

error[E0907]: type inside generator must be known in this context
 --> $DIR/not-a-result.rs:7:1
  |
7 | #[async]
  | ^^^^^^^^
  |
note: the type is part of the generator because of this `yield`
 --> $DIR/not-a-result.rs:7:1
  |
7 | #[async]
  | ^^^^^^^^

error[E0277]: the trait bound `{integer}: futures::__rt::IsResult` is not satisfied
  --> $DIR/not-a-result.rs:13:13
   |
13 | fn bar() -> Box<u32> {
   |             ^^^^^^^^ async functions must return a `Result` or a typedef of `Result`
   |
   = help: the trait `futures::__rt::IsResult` is not implemented for `{integer}`
   = note: required by `futures::__rt::gen_async`

error[E0308]: mismatched types
  --> $DIR/not-a-result.rs:13:13
   |
13 | fn bar() -> Box<u32> {
   |             ^^^^^^^^
   |             |
   |             expected struct `std::boxed::Box`, found struct `futures::__rt::GenAsync`
   |             expected `std::boxed::Box<u32>` because of return type
   |
   = note: expected type `std::boxed::Box<u32>`
              found type `futures::__rt::GenAsync<[static generator@$DIR/not-a-result.rs:12:1: 15:2 _], _>`

error[E0907]: type inside generator must be known in this context
  --> $DIR/not-a-result.rs:12:1
   |
12 | #[async]
   | ^^^^^^^^
   |
note: the type is part of the generator because of this `yield`
  --> $DIR/not-a-result.rs:12:1
   |
12 | #[async]
   | ^^^^^^^^

error: aborting due to 6 previous errors

Some errors occurred: E0277, E0308, E0907.
For more information about an error, try `rustc --explain E0277`.
